# tholos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GLOSSARY.md  INTEGRATION.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  SECURITY.md
contracts/tholos/: Cargo.toml
contracts/tholos/src/: lib.rs  test.rs
contracts/tholos/test_snapshots/test/: test_admin_can_update_resolvers.1.json  test_admin_update_resolvers_cancels_open_rotation.1.json  test_assert_outcome_is_not_reentrant.1.json  test_assertion_storage_ttl_is_extended_on_every_write.1.json  test_cannot_dispute_after_window_closes.1.json  test_cannot_dispute_an_already_disputed_assertion.1.json  test_cannot_finalize_before_window_closes.1.json  test_cannot_initialize_twice.1.json  test_cannot_initialize_with_even_resolver_count.1.json  test_cannot_initialize_with_reward_bps_over_max.1.json  test_cannot_initialize_with_too_many_resolvers.1.json  test_cannot_propose_rotation_for_non_member.1.json  test_cannot_resolve_a_non_disputed_assertion.1.json  test_cannot_update_resolvers_to_too_many.1.json  test_cannot_vote_rotation_without_proposal.1.json  test_deadlock_autocancels_rotation.1.json  test_dispute_is_not_reentrant.1.json  test_disputed_assertion_pays_winner.1.json  test_finalize_is_not_reentrant.1.json  test_finalize_max_reward_bps.1.json  test_finalize_requires_auth_when_reward_bps_is_zero.1.json  test_finalize_with_reward_pays_caller_and_asserter.1.json  test_finalize_with_reward_works_while_paused.1.json  test_non_resolver_cannot_vote.1.json  (+14 more)
(+27 files in other folders)
