[package]
name = "tholos"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
proptest = "1.11.0"
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
